[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passosh"
version = "0.0.1"
authors = [
  { name="bersegosx", email="bersegosx@gmail.com" },
]
description = "Generate passes (.pkpass) files for Apple Wallet"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"
