[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "passosh"
version = "0.0.4"
authors = [
  { name="bersegosx", email="bersegosx@gmail.com" },
]
description = "Generate passes (.pkpass) files for Apple Wallet"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "cryptography==41.0.7",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest", "flake8"]

[project.urls]
Homepage = "https://github.com/bersegosx/passosh"
Issues = "https://github.com/bersegosx/passosh/issues"
